kustomize/apps/store-simulator/overlays/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: store-simulator
  name: store-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: store-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: store-simulator
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -Djavax.net.ssl.trustStoreType=jks
        - -Djavax.net.ssl.trustStore=/deployments/certs/mq-tls/mq-tls.jks
        - -Djavax.net.ssl.trustStorePassword=my-mq-password
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/eda-store-simulator
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: store-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: smq-sa
